trying to set up a tast to inline stuff

--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -8,8 +8,8 @@
 <body>
     <main>
         <article>
-            <h1>{{ .Title }}</h1>
-            {{ .Content }}
+            <h1>{{ .Title }} 2</h1>
+            {{ .Content }} 
         </article>
     </main>
 </body>
