--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,7 +4,7 @@
     <title>{{ .Title }}</title>
     <meta charset="UTF-8">
     <meta name="description" content="{{ .Description }}">
-    <link rel="stylesheet" href="/css/{{ index .Site.Data.css.hash "main.css" }}" />
+    <link rel="stylesheet" href="css/inline.css" />
 </head>
 <body>
     <main>
